--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.20.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@supabase/supabase-js": "^2.46.2",
     "@vitejs/plugin-react": "^4.3.4",
