--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.20.2",
+    "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.2",
     "@supabase/supabase-js": "^2.46.2",
     "@vitejs/plugin-react": "^4.3.4",
     "canvas-confetti": "^1.9.3",
