--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.4",
+    "@react-oauth/google": "^0.12.1",
     "@supabase/supabase-js": "^2.46.2",
     "@vitejs/plugin-react": "^4.3.4",
     "canvas-confetti": "^1.9.3",
@@ -23,6 +24,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.462.0",
     "mammoth": "^1.8.0",
+    "okto-sdk-react": "^0.1.8",
     "pdfjs-dist": "^3.11.174",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
