Add logic to store user data in Supabase

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,7 @@ VITE_SUPABASE_ANON_KEY=
 VITE_CLERK_PUBLISHABLE_KEY=
 VITE_OKTO_CLIENT_API_KEY=
 VITE_GOOGLE_CLIENT_ID=
+VITE_SUPABASE_URL=
+VITE_SUPABASE_ANON_KEY=
+VITE_CLERK_PUBLISHABLE_KEY=
+VITE_MISTRAL_API_KEY=
