--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.0.6",
     "lodash": "^4.17.21",
     "lucide-react": "^0.462.0",
     "mammoth": "^1.8.0",
